--- a/css/style.css
+++ b/css/style.css
@@ -7,62 +7,108 @@ Dark green: #28b485
 
 */
 
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family:"Lato",sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: #777;
-    padding:30px;
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px;
 }
 
-.header{
-    height:95vh;
-    background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801),rgba(40, 180, 133, 0.795)),url(../img/hero.jpg);
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    clip-path: polygon(0 0,100% 0,100% 80vh,0 100%);
-} 
-
-.logo-box{
-    position:absolute;
-    top:40px;
-    left:40px;
+.header {
+  height: 95vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.801),
+      rgba(40, 180, 133, 0.795)
+    ),
+    url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 }
 
-.logo{
-    height:35px;
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
 }
 
-.text-box{
-    position:absolute;
-    top:40%;
-    left:50%;
-    transform:translate(-50%,-50%)
+.logo {
+  height: 35px;
 }
 
-.heading-primary{
-    color:#ffff;
-    text-transform: uppercase;
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.heading-primary-main{
-    display:block;
-    font-size:60px;
-    font-weight:400;
-    letter-spacing:35px;
+.heading-primary {
+  color: #ffff;
+  text-transform: uppercase;
+
+  backface-visibility: hidden;
 }
 
-.heading-primary-sub{
-      display:block;
-      font-size: 20px;
-      font-weight: 700;
-      letter-spacing:17.4px;
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+
+  animation-name: moveFromLeft;
+  animation-duration: 1s;
+  /* animation-delay: 0.3s; */
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 17.4px;
+
+  animation-name: moveFromRight;
+  animation-duration: 1s;
+}
+
+@keyframes moveFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translate(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translate(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
