hero btn with psuedo class,animations

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,22 @@ body {
   }
 }
 
+@keyframes moveFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+
+  80% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -124,6 +140,7 @@ body {
   border-radius: 100px;
 
   transition: all 0.2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -139,4 +156,31 @@ body {
 .btn-white {
   background-color: white;
   color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: white;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveFromBottom 1s ease-out 0.75s;
+  animation-fill-mode: backwards;
 }
